@@ -47,4 +47,4 @@ Mac OS X 10.5.3, iPhone OS 2.0, Beta 8 release or later
 
 
 [1] http://code.google.com/p/cocos2d-iphone
-[2]: http://www.cocos2d.org
+[2] http://www.cocos2d.org
