@@ -84,9 +84,9 @@ Class restartTransition()
 	[self add: label];
 	
 	// menu
-	MenuItemImage *item1 = [MenuItemImage itemFromNormalImage:@"b1.png" selectedImage:@"b2.png" target:self selector:@selector(backCallback)];
-	MenuItemImage *item2 = [MenuItemImage itemFromNormalImage:@"r1.png" selectedImage:@"r2.png" target:self selector:@selector(restartCallback)];
-	MenuItemImage *item3 = [MenuItemImage itemFromNormalImage:@"f1.png" selectedImage:@"f2.png" target:self selector:@selector(nextCallback)];
+	MenuItemImage *item1 = [MenuItemImage itemFromNormalImage:@"b1.png" selectedImage:@"b2.png" target:self selector:@selector(backCallback:)];
+	MenuItemImage *item2 = [MenuItemImage itemFromNormalImage:@"r1.png" selectedImage:@"r2.png" target:self selector:@selector(restartCallback:)];
+	MenuItemImage *item3 = [MenuItemImage itemFromNormalImage:@"f1.png" selectedImage:@"f2.png" target:self selector:@selector(nextCallback:)];
 	Menu *menu = [Menu menuWithItems:item1, item2, item3, nil];
 	menu.position = cpvzero;
 	item1.position = cpv(480/2-100,30);
@@ -97,21 +97,21 @@ Class restartTransition()
 	return self;
 }
 
--(void) nextCallback
+-(void) nextCallback:(id) sender
 {
 	Scene *s2 = [Scene node];
 	[s2 add: [TextLayer2 node]];
 	[[Director sharedDirector] replaceScene: [nextTransition() transitionWithDuration:1.2 scene:s2]];
 }	
 
--(void) backCallback
+-(void) backCallback:(id) sender
 {
 	Scene *s2 = [Scene node];
 	[s2 add: [TextLayer2 node]];
 	[[Director sharedDirector] replaceScene: [backTransition() transitionWithDuration:1.2 scene:s2]];
 }	
 
--(void) restartCallback
+-(void) restartCallback:(id) sender
 {
 	Scene *s2 = [Scene node];
 	[s2 add: [TextLayer2 node]];
@@ -140,9 +140,9 @@ Class restartTransition()
 	[self add: label];
 	
 	// menu
-	MenuItemImage *item1 = [MenuItemImage itemFromNormalImage:@"b1.png" selectedImage:@"b2.png" target:self selector:@selector(backCallback)];
-	MenuItemImage *item2 = [MenuItemImage itemFromNormalImage:@"r1.png" selectedImage:@"r2.png" target:self selector:@selector(restartCallback)];
-	MenuItemImage *item3 = [MenuItemImage itemFromNormalImage:@"f1.png" selectedImage:@"f2.png" target:self selector:@selector(nextCallback)];
+	MenuItemImage *item1 = [MenuItemImage itemFromNormalImage:@"b1.png" selectedImage:@"b2.png" target:self selector:@selector(backCallback:)];
+	MenuItemImage *item2 = [MenuItemImage itemFromNormalImage:@"r1.png" selectedImage:@"r2.png" target:self selector:@selector(restartCallback:)];
+	MenuItemImage *item3 = [MenuItemImage itemFromNormalImage:@"f1.png" selectedImage:@"f2.png" target:self selector:@selector(nextCallback:)];
 	Menu *menu = [Menu menuWithItems:item1, item2, item3, nil];
 	menu.position = cpvzero;
 	item1.position = cpv(480/2-100,30);
@@ -153,21 +153,21 @@ Class restartTransition()
 	return self;
 }
 
--(void) nextCallback
+-(void) nextCallback:(id) sender
 {
 	Scene *s2 = [Scene node];
 	[s2 add: [TextLayer node]];
 	[[Director sharedDirector] replaceScene: [nextTransition() transitionWithDuration:1.2 scene:s2]];
 }	
 
--(void) backCallback
+-(void) backCallback:(id) sender
 {
 	Scene *s2 = [Scene node];
 	[s2 add: [TextLayer node]];
 	[[Director sharedDirector] replaceScene: [backTransition() transitionWithDuration:1.2 scene:s2]];
 }	
 
--(void) restartCallback
+-(void) restartCallback:(id) sender
 {
 	Scene *s2 = [Scene node];
 	[s2 add: [TextLayer node]];
